--- a/src/webapp/templates/portfolio_sim/buy.html
+++ b/src/webapp/templates/portfolio_sim/buy.html
@@ -2,23 +2,24 @@
 
 {% block title %}Buy {{ticker}}{% endblock %} 
 
-{% block content%}
-<!-- data -->
-<div id="data-container"
-    data-history="{{ history }}">
-</div>
+{% block data %}
+    data-history="{{ history }}"
+{% endblock %}
 
-<div class="container my-5 content-container">
-    <h1 class="text-center">BUY: <strong>{{ info.company_name }}</strong></h1>
+{% block content %}
+    <!-- header -->
+    <div class="mb-4 border-bottom">
+        <h1 class="display-5 fw-bold text-white text-center">BUY: <strong>{{ info.company_name }}</strong></h1>
+    </div>
+    
     <h3 class="text-center"><strong>{{ ticker }}</strong> is currently <strong>${{ info.price }} {{ info.currency }}</strong></h3>
     <h6 class="text-center"> 
         <u>Updated: <strong>{{ time }}</strong></u>
     </h6>
 
-    <div class="container mt-5">
+    <div class="mt-5">
         <p class="lead text-center">
             You have <strong>${{ available_cash }}</strong> available in cash <br>
-
             How many shares would you like to buy? (max <strong>{{ max_shares }}</strong>)
         </p>
     </div>
@@ -64,7 +65,7 @@
     </div>
 
     <!-- History plot -->
-    <div class="my-3 w-100" id="historyPlot"></div>
+    <div class="my-3" id="historyPlot"></div>
 
     <!-- Performance Summary -->
     <h4>Performance Summary</h4>
@@ -101,8 +102,6 @@
             </div>
         </div>
     </div>
-
-</div>
 {% endblock %}
 
 {% block scripts %}
