--- a/src/webapp/templates/portfolio_sim/sell.html
+++ b/src/webapp/templates/portfolio_sim/sell.html
@@ -2,9 +2,16 @@
 
 {% block title %}Sell {{ticker}}{% endblock %} 
 
+{% block data %}
+    data-max-shares="{{ info.shares }}"
+{% endblock %}
+
 {% block content%}
-<div class="container my-5 content-container">
-    <h1 class="text-center mb-3">SELL: <strong>{{ info.name }}</strong></h1>
+    <!-- header -->
+    <div class="mb-4 border-bottom">
+        <h1 class="display-5 fw-bold text-white text-center">SELL: <strong>{{ info.name }}</strong></h1>
+    </div>
+    
     <h3 class="text-center"><strong>{{ info.ticker }}</strong> is currently <strong>${{ current_price }} {{ info.currency }}</strong></h3>
     <h6 class="text-center"> 
         <u>Updated: <strong>{{ time }}</strong></u>
@@ -36,43 +43,39 @@
         </p>
     </div>
 
-    <div class="container" id="sellForm" data-max-shares="{{ info.shares }}">
-        <form method="POST" class="form-mini mx-auto">
-            <div class="form-floating mb-4">
-                <input type="number" class="form-control" id="shares" name="shares" required>
-                <label for="shares">Number of Shares</label>
+    <form method="POST" class="form-mini mx-auto" id="sellForm">
+        <div class="form-floating mb-4">
+            <input type="number" class="form-control" id="shares" name="shares" required>
+            <label for="shares">Number of Shares</label>
 
-                <input type="hidden" name="ticker" id="ticker" value="{{ info.ticker }}">
-                <input type="hidden" name="price" id="price" value="{{ current_price }}">
-                <input type="hidden" name="currency" id="currency" value="{{ info.currency }}">
-                <input type="hidden" name="name" id="name" value="{{ info.name }}">
-            </div>
-            <div class="d-flex justify-content-between button-container" role="group" aria-label="Sell Options">
-                <a href="/dashboard" type="button" class="btn btn-secondary">Cancel</a>
-                <button type="button" class="btn btn-success" onclick="validateSell()">Sell</button> 
-            </div>
+            <input type="hidden" name="ticker" id="ticker" value="{{ info.ticker }}">
+            <input type="hidden" name="price" id="price" value="{{ current_price }}">
+            <input type="hidden" name="currency" id="currency" value="{{ info.currency }}">
+            <input type="hidden" name="name" id="name" value="{{ info.name }}">
+        </div>
+        <div class="d-flex justify-content-between button-container" role="group" aria-label="Sell Options">
+            <a href="/dashboard" type="button" class="btn btn-secondary">Cancel</a>
+            <button type="button" class="btn btn-success" onclick="validateSell()">Sell</button> 
+        </div>
 
-            <!-- confirmation pop up -->
-            <div class="modal" id="confirmPopup">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                        </div>
-                        <div class="modal-body text-center mt-5">
-                            <h4 id="confirmText">Are you sure?</h4>
-                            <div class="d-flex justify-content-end button-container mt-5" role="group" aria-label="Sell Options">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-success">Sell!</button> 
-                            </div>
+        <!-- confirmation pop up -->
+        <div class="modal" id="confirmPopup">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body text-center mt-5">
+                        <h4 id="confirmText">Are you sure?</h4>
+                        <div class="d-flex justify-content-end button-container mt-5" role="group" aria-label="Sell Options">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-success">Sell!</button> 
                         </div>
                     </div>
                 </div>
             </div>
-
-        </form>
-    </div>
-</div>
+        </div>
+    </form>
 {% endblock %}
 
 {% block scripts %}
