--- a/src/webapp/templates/authentication/sign_up.html
+++ b/src/webapp/templates/authentication/sign_up.html
@@ -3,9 +3,9 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-  <main class="form-signup m-auto">
+  <main class="form-signup m-auto mt-5">
     <form method="POST">
-      <h1 class="h3 mb-4 fw-normal mt-5">Sign Up</h1>
+      <h3 class="display-6 fw-bold text-white">Sign Up</h3>
 
       <div class="form-floating mb-3">
         <input type="email" class="form-control" id="email" name="email" required>
@@ -27,7 +27,7 @@
     </form>
 
     <div class="text-center">
-      <a href="/login">Already have an account?</a>
+      <a href="/sign_in">Already have an account?</a>
     </div>
   </main>
 {% endblock %}
