--- a/src/webapp/templates/portfolio_sim/buy.html
+++ b/src/webapp/templates/portfolio_sim/buy.html
@@ -39,7 +39,7 @@
                 <input type="hidden" name="sector" id="sector" value="{{ info.sector }}">
             </div>
             <div class="d-flex justify-content-between button-container" role="group" aria-label="Buy Options">
-                <a href="/dashboard" type="button" class="btn btn-secondary">Cancel</a>
+                <a href="{{ url_for('portfolio_sim.dashboard')}}" type="button" class="btn btn-outline-secondary">Cancel</a>
                 <button type="button" class="btn btn-success" onclick="validateBuy()">Buy</button> 
             </div>
 
@@ -53,8 +53,8 @@
                         <div class="modal-body text-center mt-5">
                             <h4 id="confirmText">Are you sure?</h4>
                             <div class="d-flex justify-content-end button-container mt-5" role="group" aria-label="Buy Options">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-success">Buy!</button> 
+                                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-success">Buy</button> 
                             </div>
                         </div>
                     </div>
