--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -39,8 +39,8 @@
                                         <label for="ticker">Stock Ticker</label>
                                     </div>
                                     <div class="d-flex justify-content-end button-container">
-                                        <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary">Buy Stock</button>
+                                        <button type="button" class="btn btn-outline-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-success">Buy</button>
                                     </div>
                                 </form>
                             </div>
@@ -65,8 +65,8 @@
                                             </select>
                                         </div>
                                         <div class="d-flex justify-content-end button-container">
-                                            <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
-                                            <button type="submit" class="btn btn-primary">Continue</button>
+                                            <button type="button" class="btn btn-outline-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" class="btn btn-success">Sell</button>
                                         </div>
                                     </form>
                                 {% else %}
@@ -94,8 +94,8 @@
                                         <label for="searchTicker">Stock Ticker</label>
                                     </div>
                                     <div class="d-flex justify-content-end button-container">
-                                        <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary">Search</button>
+                                        <button type="button" class="btn btn-outline-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-success">Search</button>
                                     </div>
                                 </form>
                             </div>
@@ -152,7 +152,7 @@
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Looks like you don't have a portfolio yet! Dont worry, just create a profile and start having FUN(ance). Or, feel free to get more familiar with the rules first.</p>
                 <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center border-bottom">
-                    <a type="button" class="btn btn-outline-secondary btn-lg px-4 mr-3" id="rules" href="/rules">Game Rules</a>
+                    <a type="button" class="btn btn-outline-secondary btn-lg px-4 mr-3" id="rules" href="{{ url_for('portfolio_sim.rules') }}">Game Rules</a>
                     <form method="POST">
                         <input type="hidden" name="create_portfolio" value="create user portfolio">
                         <button type="submit" class="btn btn-info btn-lg px-4 gap-3" id="createProfile">Create Profile</button>
