--- a/src/webapp/templates/portfolio_sim/sell.html
+++ b/src/webapp/templates/portfolio_sim/sell.html
@@ -2,10 +2,6 @@
 
 {% block title %}Sell {{ticker}}{% endblock %} 
 
-{% block data %}
-    data-max-shares="{{ info.shares }}"
-{% endblock %}
-
 {% block content%}
     <!-- header -->
     <div class="mb-4 border-bottom">
@@ -48,13 +44,14 @@
             <input type="number" class="form-control" id="shares" name="shares" required>
             <label for="shares">Number of Shares</label>
 
+            <input type="hidden" name="sharesOwned" id="sharesOwned" value="{{ info.shares }}">
             <input type="hidden" name="ticker" id="ticker" value="{{ info.ticker }}">
             <input type="hidden" name="price" id="price" value="{{ current_price }}">
             <input type="hidden" name="currency" id="currency" value="{{ info.currency }}">
             <input type="hidden" name="name" id="name" value="{{ info.name }}">
         </div>
         <div class="d-flex justify-content-between button-container" role="group" aria-label="Sell Options">
-            <a href="/dashboard" type="button" class="btn btn-secondary">Cancel</a>
+            <a href="{{ url_for('portfolio_sim.dashboard') }}" type="button" class="btn btn-outline-secondary">Cancel</a>
             <button type="button" class="btn btn-success" onclick="validateSell()">Sell</button> 
         </div>
 
@@ -68,8 +65,8 @@
                     <div class="modal-body text-center mt-5">
                         <h4 id="confirmText">Are you sure?</h4>
                         <div class="d-flex justify-content-end button-container mt-5" role="group" aria-label="Sell Options">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-success">Sell!</button> 
+                            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-success">Sell</button> 
                         </div>
                     </div>
                 </div>
