fix navigation buttons breaking on url route change

--- a/src/webapp/templates/authentication/sign_up.html
+++ b/src/webapp/templates/authentication/sign_up.html
@@ -27,7 +27,7 @@
     </form>
 
     <div class="text-center">
-      <a href="/sign_in">Already have an account?</a>
+      <a href="{{ url_for('auth.sign_in') }}">Already have an account?</a>
     </div>
   </main>
 {% endblock %}
