--- a/src/webapp/templates/authentication/sign_in.html
+++ b/src/webapp/templates/authentication/sign_in.html
@@ -26,7 +26,7 @@
     </form>
 
     <div class="text-center">
-      <a href="/sign_up">Don't have an account?</a>
+      <a href="{{ url_for('auth.sign_up') }}">Don't have an account?</a>
     </div>
   </main>
 {% endblock %}
