--- a/src/webapp/templates/blogs_list.html
+++ b/src/webapp/templates/blogs_list.html
@@ -15,10 +15,10 @@
                     <div class="card-body d-flex flex-column align-items-middle">
                         <strong class="d-inline-block mb-2 text-muted">{{ blog.date }}</strong>
                         <h3 class="mb-3">
-                            <a class="text-white" href="/blogs/{{ blog.file_name }}">{{ blog.title }}</a>
+                            <a class="text-white" href="{{ url_for('blogs.blog', file_name=blog.file_name) }}">{{ blog.title }}</a>
                         </h3>
                         <p class="card-text mb-auto">{{ blog.description }}</p>
-                        <a href="/blogs/{{ blog.file_name }}">Read More</a>
+                        <a href="{{ url_for('blogs.blog', file_name=blog.file_name) }}">Read More</a>
                     </div>
                 </div>
             </div>
