--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="../static/icons/funance_logo.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link type="text/css" rel="stylesheet" href="../static/styles/main.css">
 
@@ -16,30 +16,50 @@
 
   <body class="d-flex flex-column h-100">
     <!-- navigation bar -->
-    <header class="p-3 text-bg-dark">
-      <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-  
-          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-2 text-white" id="home">Home</a></li>
-            <li><a href="/blogs" class="nav-link px-2 text-secondary" id="blogs">Blogs</a></li>
-            <li><a href="/rules" class="nav-link px-2 text-secondary" id="rules">Game Rules</a></li>
-            <li><a href="/leaderboard" class="nav-link px-2 text-secondary" id="leaderboard">Leaderboard</a></li>
-            {% if user.is_authenticated %}
-              <li><a href="/dashboard" class="nav-link px-2 text-secondary" id="dashboard">My Portfolio</a></li>
-            {% endif %}
-          </ul>
-
-          <div class="text-end">
-            {% if user.is_authenticated %}
-              <a class="btn btn-warning" id="signOut" href="/sign_out">Sign Out</a>
-            {% else %}
-              <a class="btn btn-outline-light me-2" id="signIn" href="/sign_in">Sign In</a>
-              <a class="btn btn-warning" id="signUp" href="/sign_up">Sign Up</a>
-            {% endif %}
+    <header class="m-3">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="h4" style="text-decoration: none;" href="/">Funance</a>
+          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="navbar-collapse collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <!-- home -->
+              <li class="nav-item">
+                <a class="nav-link {% if active_page == 'home' %}text-white{% endif %}" href="{{ url_for('views.home') }}">Home</a>
+              </li>
+              <!-- blogs -->
+              <li class="nav-item">
+                <a class="nav-link {% if active_page == 'blogs_list' %}text-white{% endif %}" href="{{ url_for('blogs.blogs_list') }}">Blogs</a>
+              </li>
+              <!-- game rules -->
+              <li class="nav-item">
+                <a class="nav-link {% if active_page == 'rules' %}text-white{% endif %}" href="{{ url_for('portfolio_sim.rules') }}">Game Rules</a>
+              </li>
+              <!-- leaderboard -->
+              <li class="nav-item">
+                <a class="nav-link {% if active_page == 'leaderboard' %}text-white{% endif %}" href="{{ url_for('portfolio_sim.leaderboard') }}">Leaderboard</a>
+              </li>
+              <!-- dashboard -->
+              {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link {% if active_page == 'dashboard' %}text-white{% endif %}" href="{{ url_for('portfolio_sim.dashboard') }}">My Portfolio</a>
+                </li>
+              {% endif %}
+            </ul>
+            <div class="d-flex">
+              {% if user.is_authenticated %}
+                <a class="btn btn-warning" id="signOut" href="{{ url_for('auth.sign_out') }}">Sign Out</a>
+              {% else %}
+                <a class="btn btn-outline-light me-2" id="signIn" href="{{ url_for('auth.sign_in') }}">Sign In</a>
+                <a class="btn btn-warning" id="signUp" href="{{ url_for('auth.sign_up') }}">Sign Up</a>
+              {% endif %}
+            </div>
           </div>
         </div>
-      </div>
+      </nav>
     </header>
 
     <!-- backend message flashing -->
@@ -71,8 +91,8 @@
     </main>
 
     <!-- footer -->
-    <footer class="container footer d-flex flex-wrap justify-content-between py-3 border-top sticky-bottom">
-      <div class="col-md-4 d-flex align-items-center">
+    <footer class="container footer d-flex flex-wrap justify-content-between border-top sticky-bottom mb-3">
+      <div class="col-md-4 d-flex align-items-center mt-3">
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <img src="../static/icons/funance_logo.jpg" alt="FUNance logo" width="24" height="24">
         </a>
@@ -80,7 +100,7 @@
         <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v0.3.0</span>
       </div>
   
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex mt-3">
         <li class="ms-3">
           <a class="text-body-secondary" href="https://github.com/yangsu01">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -105,9 +125,9 @@
       </ul>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
     
     <script src="../static/scripts/index.js" defer></script>
     {% block scripts %} {% endblock %}
