update blogs route to blog

--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -32,7 +32,7 @@
               </li>
               <!-- blogs -->
               <li class="nav-item">
-                <a class="nav-link {% if active_page == 'blogs_list' %}text-white{% endif %}" href="{{ url_for('blogs.blogs_list') }}">Blogs</a>
+                <a class="nav-link {% if active_page == 'blog_list' %}text-white{% endif %}" href="{{ url_for('blog.blog_list') }}">Blog</a>
               </li>
               <!-- game rules -->
               <li class="nav-item">
@@ -97,7 +97,7 @@
           <img src="../static/icons/funance_logo.jpg" alt="FUNance logo" width="24" height="24">
         </a>
         <!-- app version -->
-        <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v0.3.0</span>
+        <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v0.4.1</span>
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex mt-3">
