--- a/src/webapp/templates/blog_list.html
+++ b/src/webapp/templates/blog_list.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Blogs{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block content %}
     <!-- header -->
     <div class="mb-4 border-bottom">
-        <h1 class="display-5 fw-bold text-white text-center">FUNance Blogs</h1>
+        <h1 class="display-5 fw-bold text-white text-center">FUNance Blog</h1>
     </div>
 
     <div class="row mb-2">
@@ -15,10 +15,10 @@
                     <div class="card-body d-flex flex-column align-items-middle">
                         <strong class="d-inline-block mb-2 text-muted">{{ blog.date }}</strong>
                         <h3 class="mb-3">
-                            <a class="text-white" href="{{ url_for('blogs.blog', file_name=blog.file_name) }}">{{ blog.title }}</a>
+                            <a class="text-white" href="{{ url_for('blog.blog_view', file_name=blog.file_name) }}">{{ blog.title }}</a>
                         </h3>
                         <p class="card-text mb-auto">{{ blog.description }}</p>
-                        <a href="{{ url_for('blogs.blog', file_name=blog.file_name) }}">Read More</a>
+                        <a href="{{ url_for('blog.blog_view', file_name=blog.file_name) }}">Read More</a>
                     </div>
                 </div>
             </div>
