update button color

--- a/src/webapp/templates/home.html
+++ b/src/webapp/templates/home.html
@@ -17,7 +17,7 @@
                     Currently, the main feature consists of a portfolio simulation game: Race your friends to see who can make the most GAINS!<br>
 
                     <strong>To get started, check out the game rules</strong><br>
-                    <a class="btn btn-info btn-lg mt-4" id="rules" href="/rules">Game Rules</a>
+                    <a class="btn btn-success btn-lg mt-4" id="rules" href="{{url_for('portfolio_sim.rules')}}">Game Rules</a>
                 </p>
             </div>
         </div>
