--- a/src/webapp/templates/authentication/sign_in.html
+++ b/src/webapp/templates/authentication/sign_in.html
@@ -22,7 +22,7 @@
           Remember me
         </label>
       </div>
-      <button class="btn btn-primary w-100 py-2 mb-3" type="submit">Sign in</button>
+      <button class="btn btn-success w-100 py-2 mb-3" type="submit">Sign in</button>
     </form>
 
     <div class="text-center">
